manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "ssadcloudk8s-9b7c"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "ssadcloudk8s-9b7c"
  template:
    metadata:
      labels:
        app: "ssadcloudk8s-9b7c"
    spec:
      containers:
        - name: "ssadcloudk8s-9b7c"
          image: "ssadcloudacr.azurecr.io/ssadcloudk8s"
          ports:
          - containerPort: 80
